# slack-aws-serverless-bot-demo

./: .gitignore  Makefile  README.md  config.json  package.json  pyproject.toml
backend/: hook.py  serverless.yaml
backend/api/: config.py
backend/api/lib/: s3.py  slack.py  slack_exception.py
backend/api/routes/: root.py  slack.py  slack_subcommands.py
localdev/: backend.Dockerfile  docker-compose.yaml
slack/: manifest.yaml
tf/: kms.tf  locals.tf  main.tf  plan.out  role.tf  s3.tf  write_conf.tf
